2003-10-04  Lluis Sanchez Gual <lluis@ximian.com>

	* SoapDocumentationHandler.cs: Moved here the code from 
	  WebServiceHandlerFactory that generates the documentation page.
	* WebServiceHandlerFactory.cs: Moved the code that generates the doc page
	  to SoapDocumentationHandler.cs.
	* HttpGetClientProtocol.cs, HttpGetWebServiceHandler.cs,
	  HttpPostClientProtocol.cs, HttpPostWebServiceHandler.cs,
	  HttpSimpleWebServiceHandler.cs, HttpSoapWebServiceHandler.cs,
	  SoapHttpClientProtocol.cs: Changed parameters of GetTypeStub call.
	* HttpGetTypeStubInfo.cs, HttpPostTypeStubInfo.cs: Added ProtocolName
	  property. Added check for valid parameters.
	* HttpSimpleTypeStubInfo.cs: Define return MimeFormatter in constructor.
	* Methods.cs: BindingInfo and related properties moved to base TypeStubInfo.
	  Added properties for XmlImporter and SoapImporter.
	* TypeStubManager.cs: Added BindingInfo and related properties.
	  Changed GetTypeStub method. Now it takes the name of the protocol for
	  which to get the type stub info.
	* ValueCollectionParameterReader.cs: IsSupported should only return true
	  for input primitive parameters or array of primitives.

2003-10-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SoapDocumentationHandler.cs: it does not generate the documentation
	page any more. GetDescription and GetSchemas are now internal.

	* WebServiceHandlerFactory.cs: generate the documentation page without
	doing a Transfer () but instead creating a Page instance from the wsdl
	help file. This file is located from the configuration file that
	contains the <wsdlHelpGenerator> tag.

2003-10-01  Lluis Sanchez Gual <lluis@ximian.com>

	* HtmlFormParameterReader.cs, HtmlFormParameterWriter.cs, 
	  HttpGetClientProtocol.cs, HttpPostClientProtocol.cs, 
	  HttpSimpleClientProtocol.cs, MimeFormatter.cs, MimeParameterWriter.cs,
	  NopReturnReader.cs, UrlEncodedParameterWriter.cs, UrlParameterReader.cs,
	  UrlParameterWriter.cs, ValueCollectionParameterReader.cs, 